infra/kubernetes/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devpulse-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devpulse-postgres
  template:
    metadata:
      labels:
        app: devpulse-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: pgdata
          persistentVolumeClaim:
            claimName: devpulse-postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: devpulse-postgres
spec:
  selector:
    app: devpulse-postgres
  ports:
    - port: 5432
      targetPort: 5432
